# StreamDock

./: LICENSE  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/auth/: routers.py
backend/app/api/user/: models.py  routers.py  schemas.py  services.py
backend/app/common/: constants.py  models.py  services.py  utils.py
backend/app/core/: config.py
backend/app/db/: postgres.py
backend/app/static/templates/: index.html
backend/migrations/: env.py
backend/migrations/versions/: 6c362fc08728_initialize_migration.py
streamdock_backend/: pyproject.toml
streamdock_backend/src/api/: main.py
streamdock_backend/src/api/core/: config.py  logging.py
