[tool.poetry]
name = "api"
version = "0.1.0"
description = "Download videos and audio from any source — FastAPI"
authors = ["Satyaprakash <satyaprakashsethy905@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic-settings = "^2.11.0"
pytz = "^2025.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
